--- a/Packages/.gitignore
+++ b/Packages/.gitignore
@@ -2,5 +2,5 @@
 !com.vrchat.core.*
 
 # Change this to match your new package name
-!com.github.matzzteg.unityautosave
+!com.c0d3m4513r.vrc.unityautosave
 !com.vrchat.core.*/
